# UOW-Sols-Exam-Scraper

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml
src/: main.py
src/Controllers/: html_checker.py  selenium_loader.py
src/Models/: result_model.py  telegram_message.py
src/Tests/: test_result_model.py  test_telegram_message.py
src/Tests/Sources/: exist.html  not_exist.html
