[tool.poetry]
name = "Uow Sols Scraper"
ersion = "0.0.1"
description = "An exam notifier for Exam results. Because it's too hard to send an email when grades are updated."

license = "MIT"

authors = [
    "Tan Jing Kai <contact@jingk.ai>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/xlanor/UOW-Sols-Exam-Scraper"
homepage = "https://github.com/xlanor/UOW-Sols-Exam-Scraper"

keywords = ['web scraping']

[tool.poetry.dependencies]
python = "^3.6" 
toml = "^0.9"
# Dependencies with extras
selenium = { version = "3.10.0" }
pip = { version = "~9.0.1" }
beautifulsoup4 = { version = "4.6.3" }
typing = { version = "3.6.6" }
arrow = { version = "^0.12.1" }
requests = { version = "^2.19.1" }

[tool.poetry.dev-dependencies]
pytest = "^3.8.0"
pytest-cov = "^2.4"
